--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,12 +10,5 @@
 
 
 <h2>Create Task</h2>
-<%= form_for Task.new, html: {class: 'form'} do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <%= f.label :details %>
-    <%= f.text_area :details %>
-    <%= f.label :completed %>
-    <%= f.check_box :completed %>
-    <%= f.submit %>
-<% end %>
+<%= render 'shared/form', task: @task %>
+
