--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,11 +1,9 @@
-<%= form_for @task, html: { class: 'form' } do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <%= f.label :details %>
-    <%= f.text_area :details %>
+<%= simple_form_for @task, html: { class: 'form' } do |f| %>
+    <%= f.input :title %>
+    <%= f.input :details %>
+
     <% if !@task.new_record? %>
-        <%= f.label :completed %>
-        <%= f.check_box :completed %>
+        <%= f.input :completed %>
     <% end %>
     <%= f.submit %>
 <% end %>
